// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`maintenance presentation > snapshots narrow color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

[1mProject versions[22m
Liftoff CLI: 0.7.0
Project generated by: 0.7.0

[1mTemplate drift[22m
+ environments/test/backend.env  not present in the recorded state
+ infrastructure/opentofu/azure/environments/test.tfvars  not present in the recorded state

[33m[warn][39m [1mDrift detected[22m: 2 to write, 0 conflict(s), 0 orphan(s), 43 unchanged
[35m$[39m [1mliftoff update[22m
",
}
`;

exports[`maintenance presentation > snapshots narrow no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

Project versions
Liftoff CLI: 0.7.0
Project generated by: 0.7.0

Template drift
+ environments/test/backend.env  not present in the recorded state
+ infrastructure/opentofu/azure/environments/test.tfvars  not present in the recorded state

[warn] Drift detected: 2 to write, 0 conflict(s), 0 orphan(s), 43 unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots plain doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "LIFTOFF / DOCTOR - Inspect CLI, workstation, project, runtime, and cloud readiness

CLI
[ok] version: Liftoff 0.7.0

Environment
[ok] node: Version 22.12.0
[ok] python: Version 3.12.0
[ok] docker: Version 27.0.0
[ok] Docker daemon: 27.0.0
[ok] opentofu: Version 1.9.0
[ok] azure-cli: Version 2.70.0
[ok] Azure authentication: Healthy
[ok] openspec: Version 1.6.0
[ok] github-copilot: Version 1.0.0
[warn] GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - Run \`copilot\` and sign in if prompted.

Project
[ok] manifest: valid, 44 artifacts present
[ok] version: generated by 0.7.0, CLI 0.7.0
[ok] framework contract: OpenSpec 1.6.0
[ok] selected agents: github-copilot
[ok] framework markers: 1 selected integration verified
[ok] python-fastapi project: stack configuration is valid
[ok] scaffold drift: project matches the current templates

Runtime
[error] .env: missing - copy .env.example to .env
[ok] compose: docker compose config is valid

Cloud - azure
[ok] azure auth: authenticated

[error] Doctor summary: 1 failure(s), 1 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots plain update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

Stage: Apply safe template changes
<project>
Applied changes
- wrote environments/test/backend.env
- wrote infrastructure/opentofu/azure/environments/test.tfvars

[ok] Updated project: 2 written, 0 skipped, 0 orphan(s)
Completion
Manifest version: 0.7.0

Next recommended command
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots plain update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "LIFTOFF / UPDATE - Reconcile the project with current Liftoff templates

Project versions
Liftoff CLI: 0.7.0
Project generated by: 0.7.0

Template drift
+ environments/test/backend.env  not present in the recorded state
+ infrastructure/opentofu/azure/environments/test.tfvars  not present in the recorded state

[warn] Drift detected: 2 to write, 0 conflict(s), 0 orphan(s), 43 unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots rich color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ [1m[36mLIFTOFF / UPDATE[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ [2mReconcile the project with current Liftoff templates[22m                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mProject versions[39m[22m ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.7.0                                                                  │
│ Project generated by  0.7.0                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ [1m[36mTemplate drift[39m[22m ─────────────────────────────────────────────────────────────────────────────┐
│ [1mChange  Artifact                                           Reason[22m                            │
│ [2m──────  ─────────────────────────────────────────────────  ─────────────────────────────────[22m │
│ +       environments/test/backend.env                      not present in the recorded state │
│ +       infrastructure/opentofu/azure/environments/test.t  not present in the recorded state │
│         fvars                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
[33m![39m [1mDrift detected[22m: 2 to write, 0 conflict(s), 0 orphan(s), 43 unchanged
[35m$[39m [1mliftoff update[22m
",
}
`;

exports[`maintenance presentation > snapshots rich doctor layers and remedies 1`] = `
{
  "code": 1,
  "err": "",
  "out": "┌─ LIFTOFF / DOCTOR ───────────────────────────────────────────────────────────────────────────┐
│ Inspect CLI, workstation, project, runtime, and cloud readiness                              │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ CLI ────────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ version: Liftoff 0.7.0                                                                     │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Environment ────────────────────────────────────────────────────────────────────────────────┐
│ ✓ node: Version 22.12.0                                                                      │
│ ✓ python: Version 3.12.0                                                                     │
│ ✓ docker: Version 27.0.0                                                                     │
│ ✓ Docker daemon: 27.0.0                                                                      │
│ ✓ opentofu: Version 1.9.0                                                                    │
│ ✓ azure-cli: Version 2.70.0                                                                  │
│ ✓ Azure authentication: Healthy                                                              │
│ ✓ openspec: Version 1.6.0                                                                    │
│ ✓ github-copilot: Version 1.0.0                                                              │
│ ! GitHub Copilot authentication: Liftoff does not automate or persist Copilot credentials. - │
│ Run \`copilot\` and sign in if prompted.                                                       │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project ────────────────────────────────────────────────────────────────────────────────────┐
│ ✓ manifest: valid, 44 artifacts present                                                      │
│ ✓ version: generated by 0.7.0, CLI 0.7.0                                                     │
│ ✓ framework contract: OpenSpec 1.6.0                                                         │
│ ✓ selected agents: github-copilot                                                            │
│ ✓ framework markers: 1 selected integration verified                                         │
│ ✓ python-fastapi project: stack configuration is valid                                       │
│ ✓ scaffold drift: project matches the current templates                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Runtime ────────────────────────────────────────────────────────────────────────────────────┐
│ × .env: missing - copy .env.example to .env                                                  │
│ ✓ compose: docker compose config is valid                                                    │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Cloud - azure ──────────────────────────────────────────────────────────────────────────────┐
│ ✓ azure auth: authenticated                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
× Doctor summary: 1 failure(s), 1 warning(s)
",
}
`;

exports[`maintenance presentation > snapshots rich no-color prompt-free update check 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile the project with current Liftoff templates                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.7.0                                                                  │
│ Project generated by  0.7.0                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Template drift ─────────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                                           Reason                            │
│ ──────  ─────────────────────────────────────────────────  ───────────────────────────────── │
│ +       environments/test/backend.env                      not present in the recorded state │
│ +       infrastructure/opentofu/azure/environments/test.t  not present in the recorded state │
│         fvars                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
! Drift detected: 2 to write, 0 conflict(s), 0 orphan(s), 43 unchanged
$ liftoff update
",
}
`;

exports[`maintenance presentation > snapshots rich update completion recommendation 1`] = `
{
  "code": 0,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile the project with current Liftoff templates                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
◆: Apply safe template changes
<project>
┌─ Applied changes ────────────────────────────────────────────────────────────────────────────┐
│ • wrote environments/test/backend.env                                                        │
│ • wrote infrastructure/opentofu/azure/environments/test.tfvars                               │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
✓ Updated project: 2 written, 0 skipped, 0 orphan(s)
┌─ Completion ─────────────────────────────────────────────────────────────────────────────────┐
│ Manifest version  0.7.0                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
Next recommended command
────────────────────────
$ liftoff validate && liftoff doctor

",
}
`;

exports[`maintenance presentation > snapshots rich update drift 1`] = `
{
  "code": 2,
  "err": "",
  "out": "┌─ LIFTOFF / UPDATE ───────────────────────────────────────────────────────────────────────────┐
│ Reconcile the project with current Liftoff templates                                         │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Project versions ───────────────────────────────────────────────────────────────────────────┐
│ Liftoff CLI           0.7.0                                                                  │
│ Project generated by  0.7.0                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
┌─ Template drift ─────────────────────────────────────────────────────────────────────────────┐
│ Change  Artifact                                           Reason                            │
│ ──────  ─────────────────────────────────────────────────  ───────────────────────────────── │
│ +       environments/test/backend.env                      not present in the recorded state │
│ +       infrastructure/opentofu/azure/environments/test.t  not present in the recorded state │
│         fvars                                                                                │
└──────────────────────────────────────────────────────────────────────────────────────────────┘
! Drift detected: 2 to write, 0 conflict(s), 0 orphan(s), 43 unchanged
$ liftoff update
",
}
`;
